# p2p-nat-traversal-engine

./: CMakeLists.txt  README.md  main.cpp
src/app/: main.cpp
src/handlers/: event_handler.h  tcp_connector.cpp  tcp_connector.h  tcp_listener.cpp  tcp_listener.h  udp_handler.cpp  udp_handler.h
src/net/: endpoint.cpp  endpoint.h
src/peer/: endpoint.h  peer.cpp  peer.h  peers_manager.cpp  peers_manager.h  session.cpp  session.h
src/reactor/: reactor.cpp  reactor.h
src/session/: session.cpp  session.h
src/transport/: connection_info.h  tcp_utils.h
src/utils/: UniqueFD.h  io_events.h  socket_utils.cpp  socket_utils.h
src/wire/: msg.h  msg_codec.cpp  msg_codec.h  msg_header.h  msg_parser.cpp  msg_parser.h  msg_types.h
src/wire/messages/: hello.h
